# cobalt-reactor

./: .editorconfig  .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: auto-assign.yml  build-crates.yml  build-debug-binaries.yml  build-release-binaries.yml  dependencies.yml  formatting.yml  push-to-main.yml  release-crates.yml  release-plz.yml  test-dev.yml  update-crates.yml
bins/cobalt/: Cargo.toml  TODO.todo
bins/cobalt/assets/icons/: icon.icns
bins/cobalt/src/: cobalt.rs  defines.rs  lib.rs  main.rs
bins/cobalt/src/debug/: mod.rs
bins/cobalt/src/render/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
bins/cobalt/src/render/focus/: plugin.rs  resources.rs
bins/cobalt/src/render/grid/: components.rs  defines.rs  mod.rs  plugin.rs  rendering.rs  systems.rs
bins/cobalt/src/render/panning/: components.rs  mod.rs  plugin.rs  systems.rs
bins/cobalt/src/states/: cobalt_state.rs  events.rs  mod.rs  plugin.rs  schedule.rs
bins/cobalt/src/states/exiting/: events.rs  plugin.rs  systems.rs
bins/cobalt/src/states/loading/: plugin.rs  systems.rs
bins/cobalt/src/states/running/: events.rs  plugin.rs  systems.rs
bins/cobalt/src/ui/: mod.rs  plugin.rs  systems.rs
bins/cobalt/src/ui/configs/: buttons.rs  floating_windows.rs  mod.rs
bins/cobalt_tilemap/src/: main.rs
bins/template_binary/: Cargo.toml  TODO.todo
bins/template_binary/src/: main.rs
crates/reactor_camera/: CHANGELOG.md  Cargo.toml  README.md
crates/reactor_camera/src/: components.rs  lib.rs  main_camera.rs  plugin.rs  plugins.rs  systems.rs
crates/reactor_core/: CHANGELOG.md  Cargo.toml  README.md
crates/reactor_core/src/: lib.rs  plugin.rs
crates/reactor_perf_ui/: CHANGELOG.md  Cargo.toml  README.md
crates/reactor_perf_ui/src/: app_ext.rs  defines.rs  lib.rs  plugin.rs  schedule.rs  utils.rs
crates/reactor_perf_ui/src/entries/: configs.rs  ecs.rs  engine.rs  entity_list.rs  entry_trait.rs  fps.rs  header_config.rs  mod.rs  system.rs  time.rs  window.rs
crates/reactor_perf_ui/src/fonts/: mod.rs
crates/reactor_perf_ui/src/icons/: mod.rs
crates/reactor_perf_ui/src/panels/: mod.rs  panel_trait.rs
crates/reactor_perf_ui/src/panels/hierarchy_panel/: config.rs  mod.rs  widget_impl.rs
crates/reactor_perf_ui/src/panels/perf_panel/: config.rs  mod.rs  ui_config.rs  widget_impl.rs
crates/reactor_perf_ui/src/widgets/: entity_entry.rs  mod.rs  panel_entry_collapsible.rs  panel_entry_text.rs  widget_trait.rs
crates/reactor_perf_ui/src/widgets/perf_panel/: config.rs  mod.rs  ui_config.rs  widget_impl.rs
crates/reactor_proto/: CHANGELOG.md  Cargo.toml  README.md
crates/reactor_proto/src/: builder.rs  commands_ext.rs  hot_reload.rs  id.rs  lib.rs  manifest_collection.rs  manifest_format.rs  manifest_loader.rs  manifest_trait.rs  module.rs  plugin.rs  proto_plugin.rs  prototype_library.rs  prototype_trait.rs  register.rs  schedule.rs  systems.rs
crates/reactor_random/: Cargo.toml  README.md
crates/reactor_random/src/: lib.rs  random_impl.rs  random_range_impl.rs  random_traits.rs  shuffle_impl.rs  shuffle_trait.rs  weighted_table.rs
crates/reactor_random/tests/: weighted_table.rs
crates/reactor_serial/: CHANGELOG.md  Cargo.toml  README.md
crates/reactor_serial/src/: app_ext.rs  commands_ext.rs  convert_save.rs  deserialize.rs  empty_prototype.rs  error.rs  event_channel.rs  events.rs  fs.rs  lib.rs  outcomes.rs  plugins.rs  resources.rs  save_data.rs  save_format.rs  schedule.rs  serialize.rs  systems.rs
crates/reactor_serial/tests/: app.rs  commands.rs  events.rs  save_data.rs
crates/reactor_serial/tests/shared/: mod.rs
crates/reactor_spatial/: CHANGELOG.md  Cargo.toml  README.md
crates/reactor_spatial/src/: compass.rs  compass_halfwinds.rs  compass_rose.rs  degrees.rs  draw_order.rs  lib.rs  plugin.rs  position2d.rs  propagation_systems.rs  radians.rs  random.rs  rotation2d.rs  scale2d.rs  spatial_bundle.rs  spatial_plugin.rs
crates/reactor_ui/: CHANGELOG.md  Cargo.toml
crates/reactor_ui/src/: lib.rs  plugin.rs  schedule.rs
crates/reactor_ui/src/configs/: mod.rs
crates/reactor_ui/src/configs/core/: alignment.rs  background.rs  base.rs  border.rs  corner_radius.rs  font.rs  icon.rs  image_source.rs  label.rs  mod.rs  picking.rs  position.rs  size.rs  text.rs
crates/reactor_ui/src/configs/widgets/: button.rs  mod.rs  text_label.rs
crates/reactor_ui/src/extensions/: mod.rs  on_click.rs  on_hover_start.rs  on_pointer_lost.rs  on_pressed.rs  pickable.rs  while_dragged.rs  while_hovered.rs
crates/reactor_ui/src/fonts/: mod.rs
crates/reactor_ui/src/icons/: mod.rs
crates/reactor_ui/src/picking_ext/: draggable.rs  mod.rs  on_click.rs  on_drag_end.rs  on_draggable_dropped.rs  on_pointer_lost.rs  while_dragged_over.rs
crates/reactor_ui/src/picking_extensions/: on_drag_end.rs  on_drag_start.rs  on_draggable_dropped.rs  on_draggable_entered.rs  on_draggable_exited.rs  on_hover_end.rs  on_hover_start.rs  on_pressed.rs  on_released.rs
crates/reactor_ui/src/style_ext/: with_background.rs  with_base_config.rs  with_position.rs
crates/reactor_ui/src/style_extensions/: mod.rs  with_alignment.rs  with_background.rs  with_base_config.rs  with_font.rs  with_position.rs  with_size.rs
crates/reactor_ui/src/widgets/: button.rs  collapsible.rs  floating_window.rs  growable_list.rs  list.rs  list_item.rs  mod.rs  plugin.rs  scrollable_list.rs  text_label.rs
crates/reactor_ui/src/widgets/list/: growable_list.rs  list_item.rs  list_item_collapsible.rs  list_item_collapsible_content.rs  list_item_collapsible_header.rs  list_item_two_text.rs  mod.rs  scrollable_list.rs
