[package]
name = "cobalt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
########## BEVY
bevy = { workspace = true }
iyes_perf_ui = { workspace = true }
iyes_progress = { workspace = true }
bevy_asset_loader = { workspace = true }
##########

########## Reactor
reactor_core = { workspace = true }
##########

[lints]
workspace = true
