[package]
name = "cobalt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy_mod_picking = { workspace = true }
bevy = { workspace = true }
########## BEVY
iyes_progress = { workspace = true }
bevy_asset_loader = { workspace = true }
sickle_ui = { workspace = true }
bevy-inspector-egui = { workspace = true }
##########

########## Reactor
reactor_core = { workspace = true, features = ["perf_ui"] }
##########

[lints]
workspace = true
