[package]
name = "reactor_core"
version = "1.0.0"
readme = "README.md"
description = "A combined suite of tools provided by reactor for use with the Bevy game engine."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy = { workspace = true, optional = true }
reactor_spatial = { workspace = true, features = ["serde"], optional = true }
reactor_random = { workspace = true, optional = true }
reactor_camera = { workspace = true, optional = true }
reactor_proto = { workspace = true, optional = true }
reactor_serial = { workspace = true, optional = true }

[features]
default = ["plugin", "spatial", "random", "camera", "proto", "serial"]
plugin = ["dep:bevy"]
spatial = ["reactor_spatial"]
random = ["reactor_random", "reactor_spatial/random"]
camera = ["reactor_camera"]
proto = ["reactor_proto"]
serial = ["reactor_serial"]
progress = ["proto", "serial", "proto_progress", "serial_progress"]
proto_progress = ["reactor_proto/progress_tracking"]
serial_progress = ["reactor_serial/progress_tracking"]

# Additional prototype formats
all_asset_loaders = [
  "reactor_proto/all_asset_loaders",
  "reactor_serial/all_asset_loaders",
]
toml = ["reactor_proto/toml", "reactor_serial/toml"]
yaml = ["reactor_proto/yaml", "reactor_serial/yaml"]
json = ["reactor_proto/json", "reactor_serial/json"]
msgpack = ["reactor_proto/msgpack", "reactor_serial/msgpack"]
xml = ["reactor_proto/xml", "reactor_serial/xml"]
csv = ["reactor_proto/csv", "reactor_serial/csv"]

[lints]
workspace = true
