[package]
name = "reactor_perf_ui"
version = "1.0.0"
readme = "README.md"
description = "Performance windows using Sickle UI via Reactor UI"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy = { workspace = true }
reactor_ui = { workspace = true }

[features]

[lints]
workspace = true
